# overage

./: .cursorignore  .dockerignore  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  LICENSE  Makefile  PRD.md  README.md  alembic.ini  codecov.yml  docker-compose.yml  doppler.yaml  pyproject.toml  railway.toml
.cursor/rules/: overage-project.mdc  provider-implementation.mdc  python-patterns.mdc  testing-patterns.mdc
.githooks/: prepare-commit-msg
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  phase4_regression.md  roadmap_phase_closure.md  task.md
.github/workflows/: cd-api.yml  ci.yml  commit-lint.yml  model-eval.yml  phase4-regression.yml  security.yml  strip-trailers.yml
dashboard/: __init__.py  app.py  url_utils.py
docs/: API.md  CODECOV.md  DEPLOYMENT.md  DEV_INFRASTRUCTURE.md  DOPPLER_1PASSWORD_SETUP.md  ESTIMATION.md  ONBOARDING.md  ROADMAP.md  yc-summer-2026-coding-agent-session.md
examples/: quickstart.py
model/data/: README.md
proxy/: config.py  demo_constants.py  exceptions.py  main.py
proxy/api/: auth.py  routes.py
proxy/estimation/: aggregator.py  alert_persistence.py  palace.py  timing.py
proxy/middleware/: request_id.py
proxy/providers/: anthropic.py  base.py  openai.py
proxy/reporting/: __init__.py  data.py  pdf_audit.py  types.py
proxy/storage/: database.py  models.py
proxy/storage/migrations/: env.py
proxy/storage/migrations/versions/: c1305a9cb9e6_initial_schema.py
proxy/tests/: conftest.py  test_aggregator.py  test_anthropic_provider.py  test_api.py  test_dashboard_url_utils.py  test_database_url_policy.py  test_demo_constants.py  test_migrations_smoke.py  test_openai_provider.py  test_palace.py  test_phase4_alert_persistence.py  test_phase4_dashboard_api_contract.py  test_providers_base.py  test_proxy_route.py  test_reporting.py  test_sdk_client.py  test_timing.py
scripts/: backup_doppler_env_to_1password.sh  benchmark.py  bootstrap_venv.py  capture_dashboard_evidence.py  codecov_local_upload.sh  demo_data.py  generate_report.py  git_strip_commit_msg.py  github_secret_codecov.sh  maintainer_smoke_live.sh  profile_tps.py  seed_test_calls.py  strip_trailers.sh  verify_alembic_schema.py  verify_python_version.py  verify_quickstart_budget.sh
sdk/: pyproject.toml
sdk/overage/: __init__.py  client.py
