[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overage"
version = "0.1.0"
description = "Python SDK for Overage — LLM reasoning token audit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Overage", email = "team@overage.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]

[project.urls]
Homepage = "https://overage.dev"
Repository = "https://github.com/overage-ai/overage-python"
Documentation = "https://docs.overage.dev"
